--- a/src/app/(web)/globals.css
+++ b/src/app/(web)/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.img {
+  @apply h-full w-full object-cover;
+}
+
+.scale-animation {
+  @apply transition-all duration-700 hover:scale-125;
+}
